Configure for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,30 @@
   ],
   "routes": [
     {
+      "src": "/images/(.*)",
+      "dest": "public/images/$1"
+    },
+    {
+      "src": "/(.*\\.css)",
+      "dest": "public/$1"
+    },
+    {
+      "src": "/(.*\\.js)",
+      "dest": "public/$1"
+    },
+    {
+      "src": "/(.*\\.html)",
+      "dest": "public/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "server.js"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/server.js"
     }
   ]
 }
