--- a/vercel.json
+++ b/vercel.json
@@ -4,34 +4,24 @@
     {
       "src": "server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/images/(.*)",
-      "dest": "public/images/$1"
-    },
-    {
-      "src": "/(.*\\.css)",
-      "dest": "public/$1"
-    },
-    {
-      "src": "/(.*\\.js)",
-      "dest": "public/$1"
-    },
-    {
-      "src": "/(.*\\.html)",
-      "dest": "public/$1"
+      "src": "/api/.*",
+      "dest": "server.js"
     },
     {
       "src": "/(.*)",
-      "dest": "server.js"
-    }
-  ],
-  "rewrites": [
+      "dest": "public/$1"
+    },
     {
-      "source": "/(.*)",
-      "destination": "/server.js"
+      "src": "/",
+      "dest": "public/index.html"
     }
   ]
 }
